# AGENT_VOICE

./: .gitignore  .vector_store_id  README.md  pyproject.toml  requirements.txt  server.py
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
documents/: TECHNICAL_ARCHITECTURE_SUMMARY.md
front-end/: app.py  voice.html  voice_component.py
scripts/: export_vector_store_env.py  smoke_rag.py  verify_openai_api_key.py
src/showroom/agents/: __init__.py  definitions.py  factory.py  response_extract.py
src/showroom/agents/graph/: __init__.py  multi_agent_system.py
src/showroom/agents/prompts/: __init__.py  escalation.py  orchestrator.py  product.py  purchase.py  space.py
src/showroom/agents/tools/: __init__.py  rag_search.py
src/showroom/core/: __init__.py  settings.py
src/showroom/domain/: schemas.py
src/showroom/helpers/: __init__.py  paths.py
src/showroom/infrastructure/: __init__.py  openai_client.py  openai_realtime_sessions.py  text_to_speech.py
src/showroom/presentation/: __init__.py  server.py
src/showroom/rag/application/: __init__.py
src/showroom/rag/application/services/: __init__.py  vector_store_service.py
src/showroom/rag/domain/: __init__.py  knowledge_corpus.py
src/showroom/rag/infrastructure/: __init__.py
src/showroom/rag/infrastructure/openai/: __init__.py  file_attributes.py  lifecycle.py
tests/: test_showroom_imports.py
