[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "showroom"
version = "0.1.0"
description = "Aether Motors AI Virtual Showroom backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.5",
    "openai>=1.70.0",
]

[tool.setuptools.packages.find]
where = ["src"]
